[tool.poetry]
name = "metaheuristics-similarity-analyzer"
version = "0.1.0"
description = ""
authors = ["hozjan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.1"
torch = ">=2.0.0, !=2.1.0, !=2.0.1"
numpy = "^1.26.1"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
niapy = "^2.1.0"
tqdm = "^4.66.2"
pygad = "^3.3.1"
graphviz = "^0.20.3"
cloudpickle = "^3.0.0"
numba = "^0.60.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
